adding edited files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-
+    <h1>The biggest startup event of the year</h1>
   </body>
 </html>
